@@ -72,6 +72,7 @@ Zope Changes
         interfaces.py)
 
     Bugs Fixed
+      - Collector #2261: Acquisition when creating objects via Webdav.
 
       - Collector #2263: 'field2ulines' did not convert empty string
         correctly.
